--- a/snippetJS.html
+++ b/snippetJS.html
@@ -4,10 +4,10 @@
 <head>
 <script src="hello.js"></script>
 f
-<h1>My First Heading</h1>
+<h1>heading </h1>
 </head>
 <body>
-<p>My first paragraph.</p>
+<p>paragraph.</p>
 
 </body>
 </html>
